[Why] : cal spacing bug fixed

--- a/css/custom-sa.css
+++ b/css/custom-sa.css
@@ -3991,7 +3991,7 @@ button.swiper-pagination-bullet {
 }
 #why .section-w2 {
     margin-top: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
 }
 #why .section-w2-left {
     padding-left: 40px;
